# dns_rev

./: LICENSE  README.md  generate.sh  setup.sh
dns_client/: Cargo.toml
dns_client/src/: command.rs  config.rs  crypto.rs  dns.rs  main.rs
dns_server/: main.py  requirements.txt
dns_server/tests/: client.py
