[package]
name = "dns_client"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
trust-dns-resolver = "0.23"
chacha20poly1305 = "0.10"
base64 = "0.21"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "dns_client"
path = "src/main.rs"
windows_subsystem = "windows"
